@@ -3,11 +3,12 @@ abstract: ~
 author:
   - 'Matteo Corti <matteo.corti@id.ethz.ch>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.14'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,9 +21,10 @@ requires:
   Carp: 0
   English: 0
   File::Slurp: 0
-  Nagios::Plugin: 0
-  Nagios::Plugin::Getopt: 0
-  Nagios::Plugin::Threshold: 0
+  Monitoring::Plugin: 0
+  Monitoring::Plugin::Getopt: 0
+  Monitoring::Plugin::Threshold: 0
+  perl: 5.8.0
   version: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
