@@ -13,22 +13,23 @@ use inc::Module::Install;
 ##############################################################################
 # Define metadata (we read it from the binary)
 
-name         'check_connections';
-version_from 'check_connections';
-all_from     'check_connections.pod';
+name              'check_connections';
+version_from      'check_connections';
+perl_version_from 'check_connections';
+all_from          'check_connections.pod';
 
 ##############################################################################
 # Specific dependencies
 
 include 'version';
 
-requires 'Carp'                      => 0;
-requires 'English'                   => 0;
-requires 'File::Slurp'               => 0;
-requires 'Nagios::Plugin::Getopt'    => 0;
-requires 'Nagios::Plugin'            => 0;
-requires 'Nagios::Plugin::Threshold' => 0;
-requires 'version'                   => 0;
+requires 'Carp'                          => 0;
+requires 'English'                       => 0;
+requires 'File::Slurp'                   => 0;
+requires 'Monitoring::Plugin::Getopt'    => 0;
+requires 'Monitoring::Plugin'            => 0;
+requires 'Monitoring::Plugin::Threshold' => 0;
+requires 'version'                       => 0;
 
 install_script  'check_connections';
 
