@@ -78,9 +78,9 @@ check_updates depends on
 
 =item * Getopt::Long
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * Pod::Usage
 
