@@ -1,3 +1,8 @@
+2015-01-09  Matteo Corti  <matteo@corti.li>
+
+	* check_connections: using Monitoring::Plugins instead of the deprecated
+	                     Nagios::Plugin
+
 2008-12-17  Matteo Corti  <matteo.corti@id.ethz.ch>
 
 	* check_connections:
